# NYUGY6903-AppliedCryptography

./: README.md
Chen-Ng-Zheng/ChenNgZheng-cs6903f18project-projecttype2/ChenNgZheng-source/NTRUEncrypt/src/: NTRU.cpp  NTRU.hpp
Chen-Ng-Zheng/ChenNgZheng-cs6903f18project-projecttype2/ChenNgZheng-source/SecretSharingMadeShort/: README.MD
Chen-Ng-Zheng/ChenNgZheng-cs6903f18project-projecttype2/ChenNgZheng-source/SecretSharingMadeShort/src/: benchmark.h  myIDA.h  shamir.cpp  shamir.h
Chen-Ng-Zheng/ChenNgZheng-source/NTRUEncrypt/src/: benchmark.hpp  main.cpp
Chen-Ng-Zheng/ChenNgZheng-source/SecretSharingMadeShort/src/: benchmark.cpp
ChenNgZheng/ChenNgZheng-cs6903f18project-projecttype2/ChenNgZheng-source/NTRUEncrypt/: README.MD
ChenNgZheng/ChenNgZheng-cs6903f18project-projecttype2/ChenNgZheng-source/NTRUEncrypt/src/: benchmark.cpp  polyinvert.cpp  util.cpp
ChenNgZheng/ChenNgZheng-cs6903f18project-projecttype2/ChenNgZheng-source/SecretSharingMadeShort/src/: myIDA.cpp  tests.cpp  util.h
ChenNgZheng/ChenNgZheng-source/NTRUEncrypt/: meson.build
ChenNgZheng/ChenNgZheng-source/NTRUEncrypt/src/: NTRUEncrypter.cpp  NTRUEncrypter.hpp  polyinvert.hpp  util.hpp
ChenNgZheng/ChenNgZheng-source/NTRUEncrypt/src/tests/: test_poly.cpp
ChenNgZheng/ChenNgZheng-source/SecretSharingMadeShort/src/: main.cpp  myAES.h  tests.h  util.cpp
projects/Chen-Ng-Zheng/: README.md
projects/Chen-Ng-Zheng/ChenNgZheng-cs6903f18project-projecttype2/: README.md
projects/Jin-Soumya-Xu/: Jin-Soumya-Xu-presentation.pptx
(+5 files in other folders)
